test_regress/t/t_interface_modport_bad.out
%Error: t/t_interface_modport_bad.v:23:8: Modport not found under interface 'ifc': 'oop_modport'
                                        : ... Suggested alternative: 'out_modport'
   ifc.oop_modport isub,   
       ^~~~~~~~~~~
%Error: Exiting due to
